subiendo carpeta completa 'desarrollo web'

--- a/Practica/style.css
+++ b/Practica/style.css
@@ -215,7 +215,17 @@ header{
     bottom: 0;
     width: 100%;
     height: 200px;
-    fill: color(#ecf0f1);
+    fill: #ecf0f1;
+    transition: .2s;
+}
+
+.wave__scroll{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 200px;
+    fill: #171B22;
     transition: .2s;
 }
 
