--- a/Practica/style.css
+++ b/Practica/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 
+html{
+    scroll-behavior: smooth;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -65,7 +69,6 @@ El acento naranja puede usarse con moderación para destacar botones de llamada 
 }
 
 body{
-    scroll-behavior: smooth;
     background-color: #ecf0f1;
     transition: .2s;
 }
@@ -229,6 +232,40 @@ header{
     transition: .2s;
 }
 
+@keyframes show {
+    from{
+        opacity: 0;
+        scale: 25%;
+    }
+
+    to{
+        opacity: 1;
+        scale: 100%;
+    }
+}
+
+img,
+h1,
+h2,
+h3,
+h4,
+p,
+b,
+a,
+input,
+label,
+button,
+span,
+svg{
+    view-timeline-name: --image;
+    view-timeline-axis: block;
+    
+    animation-timeline: --image;
+    animation-name: show;
+
+    animation-range: entry 25% cover 30%; 
+    animation-fill-mode: both;
+}
 
 /* secciones */
 
