--- a/Proyectos/Apps web/App de tareas JavaScript/estilo.css
+++ b/Proyectos/Apps web/App de tareas JavaScript/estilo.css
@@ -1,4 +1,8 @@
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     margin: 0;
     padding: 0;
     font-size: 16px;
@@ -14,11 +18,11 @@ body {
   }
   
   .container {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    /* margin-top: 30px;
+    margin-bottom: 30px; */
     width: 30%;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     background-color: white;
     padding: 30px;
   }
