--- a/Pasantia/app-tasks/frontend/src/pages/user/user.css
+++ b/Pasantia/app-tasks/frontend/src/pages/user/user.css
@@ -8,26 +8,33 @@ body {
   min-height: 100dvh;
   background-position: center;
   background-size: cover;
-}
-
-.container {
-  height: 100%;
-}
-
-.cont_task {
-  border: 1px solid;
-  border-radius: 3px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.container {
+  width: 100dvw;
+}
+
+.cont_task {
+  /* width: 40dvw; */
+
+  /* border: 1px solid; */
+  /* border-radius: 3px; */
+
+  /*display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 20px;
 
-  min-width: 30dvw;
+  min-width: 30em;
 
+  /*  */
   box-shadow: 0px 5px 20px;
-
   transition: all.2s;
 }
 .cont_task:hover {
@@ -37,19 +44,9 @@ body {
 .cont_add_task {
 }
 .cont_add_task button {
-  background-color: inherit;
-
-  color: rgb(46, 46, 46);
-
-  border: 1px solid;
   padding: 5px 20px;
   font-size: 20px;
   cursor: pointer;
-
-  transition: all 0.2s;
-}
-.cont_add_task button:hover {
-  box-shadow: 5px 5px 5px;
 }
 
 .cont_head {
@@ -89,17 +86,15 @@ body {
 
 /* popups */
 #popup {
-  z-index: 5;
+  z-index: 20;
 
   background-color: inherit;
   border: 1px solid;
   border-radius: 5px;
   backdrop-filter: blur(6px);
 
-  height: 100%;
-  width: 100%;
-
   margin: 50px 0;
+  margin: auto;
 
   display: flex;
   flex-direction: column;
