--- a/Pasantia/app-tasks/frontend/src/pages/user/user.css
+++ b/Pasantia/app-tasks/frontend/src/pages/user/user.css
@@ -16,14 +16,15 @@ body {
 }
 
 .container {
-  width: 100dvw;
+  /* height: 100%;
+  width: 100dvw; */
 }
 
 .cont_task {
-  /* width: 40dvw; */
+  /* min-width: 55dvw; */
 
-  /* border: 1px solid; */
-  /* border-radius: 3px; */
+  border: 1px solid;
+  border-radius: 3px;
 
   /*display: flex;
   flex-direction: column;
@@ -33,8 +34,8 @@ body {
 
   min-width: 30em;
 
-  /*  */
-  box-shadow: 0px 5px 20px;
+  /* box-shadow: 0px 5px 20px; */
+
   transition: all.2s;
 }
 .cont_task:hover {
@@ -43,11 +44,7 @@ body {
 
 .cont_add_task {
 }
-.cont_add_task button {
-  padding: 5px 20px;
-  font-size: 20px;
-  cursor: pointer;
-}
+
 
 .cont_head {
 }
